third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-nightly/transmute-mut-src-not-frombytes.stderr
error[E0277]: the trait bound `Src: FromBytes` is not satisfied
  --> tests/ui-nightly/transmute-mut-src-not-frombytes.rs:24:38
   |
24 | const SRC_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                      |
   |                                      the trait `FromBytes` is not implemented for `Src`
   |                                      required by a bound introduced by this call
   |
   = help: the following other types implement trait `FromBytes`:
             ()
             Dst
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and $N others
note: required by a bound in `AssertSrcIsFromBytes`
  --> tests/ui-nightly/transmute-mut-src-not-frombytes.rs:24:38
   |
24 | const SRC_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsFromBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: FromBytes` is not satisfied
  --> tests/ui-nightly/transmute-mut-src-not-frombytes.rs:24:38
   |
24 | const SRC_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `Src`
   |
   = help: the following other types implement trait `FromBytes`:
             ()
             Dst
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and $N others
note: required by a bound in `AssertSrcIsFromBytes`
  --> tests/ui-nightly/transmute-mut-src-not-frombytes.rs:24:38
   |
24 | const SRC_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsFromBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
